--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,5 @@
+@import '/node_modules/react-modal-video/scss/modal-video.scss';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -18,10 +20,6 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
+  background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb)))
     rgb(var(--background-start-rgb));
 }
